# VichMat

./: .gitignore  CMakeLists.txt
src/: 1.cpp  Camera.h  Mmath.h  main.cpp  plot_comparison.py
src/RenderPbject/: Circle.h  Cube.h  PointsScene.h  RenderObject.cpp  RenderObject.h  TestObject.h
src/Scene/: ButterflyPlotScene.h  Butterflyplotscene.h  CameraScene.h  CircleBoundingScene.h  CubeScene.h  EmptyScene.h  FigureEightPlotScene.h  IScene.h  PlotScene.h  Point.h  Points.h  PolygonPlotScene.h  SuperEightPlotScene.h  Supereightplotscene.h  TestScene.h
src/Shader/: Shader.cpp  Shader.h
